@@ -34,5 +34,6 @@ run:
   - -c
   - |
     export PYTHONPATH="$(pwd)/concourse-terraform:${PYTHONPATH}"
+    concourse-terraform/bin/install-ssh-keys &&
     concourse-terraform/bin/install-trusted-ca-certs &&
     exec concourse-terraform/bin/concourse-terraform init
