@@ -1,3 +1,7 @@
+2019-05-15
+
+- [new] supports installing ssh keys from file or var
+
 2019-05-14
 
 - added openssh-client to docker image
